# agent-uri-rs

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  Taskfile.yml  grammar.abnf  test-vectors.json
agent-uri/: README.md
agent-uri-attestation/: Cargo.toml  grammar.abnf
agent-uri-attestation/src/: claims.rs  error.rs  issuer.rs  keys.rs  lib.rs  proofs.rs  verification.rs  verifier.rs
agent-uri-attestation/tests/: grammar_proptest.rs  integration.rs  verification_tests.rs
agent-uri-dht/: Cargo.toml
agent-uri-dht/benches/: dht_bench.rs
agent-uri-dht/src/: config.rs  endpoint.rs  error.rs  key.rs  lib.rs  registration.rs  simulation.rs  stats.rs  traits.rs  trie.rs
agent-uri-eval/: Cargo.toml
agent-uri-eval/corpus/: autogen_tools.json  crewai_tools.json  langchain_tools.json  mcp_community_tools.json  mcp_tools.json  smolagents_tools.json  synthetic_tools.json
agent-uri-eval/examples/: run_discovery.rs  run_expressiveness.rs  run_real_corpus.rs
agent-uri-eval/src/: collision.rs  corpus.rs  discovery.rs  error.rs  expressiveness.rs  generator.rs  lib.rs  mapping.rs  metrics.rs  report.rs  tool_def.rs
agent-uri/benches/: parsing.rs
agent-uri/src/: agent_id.rs  agent_prefix.rs  capability_path.rs  constants.rs  path_segment.rs  prelude.rs  query.rs  uri.rs
agent-uri/tests/: grammar_proptest.rs
src/: agent_id.rs  agent_prefix.rs  builder.rs  capability_path.rs  error.rs  fragment.rs  kani_impls.rs  lib.rs  path_segment.rs  query.rs  trust_root.rs  type_class.rs  uri.rs
