[package]
name = "agent-uri-attestation"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "PASETO v4.public attestation for agent-uri"
keywords = ["agent", "uri", "paseto", "attestation", "ed25519"]
categories = ["authentication", "cryptography"]

[features]
default = []

[dependencies]
agent-uri = { path = "..", features = ["serde"] }
rusty_paseto = { version = "0.9", default-features = false, features = ["v4_public", "batteries_included"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
proptest = "1.5"
