[package]
name = "agent-uri-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Evaluation infrastructure for the Agent Identity URI Scheme paper"
keywords = ["agent", "evaluation", "benchmark", "uri"]
categories = ["development-tools::testing"]

[dependencies]
agent-uri = { path = "../agent-uri" }
agent-uri-dht = { path = "../agent-uri-dht" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
