[package]
name = "agent-uri-eval"
version = "0.2.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Evaluation infrastructure for the Agent Identity URI Scheme paper"
keywords = ["agent", "evaluation", "benchmark", "uri"]
categories = ["development-tools::testing"]

[dependencies]
agent-uri = { version = "0.4", path = "../agent-uri" }
agent-uri-dht = { version = "0.1", path = "../agent-uri-dht" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1"
tempfile = "3.24.0"

[lints]
workspace = true

[[example]]
name = "run_expressiveness"
path = "examples/run_expressiveness.rs"

[[example]]
name = "run_discovery"
path = "examples/run_discovery.rs"
